# ngmix4piff

./: .copier-answers.yml  .pre-commit-config.yaml  .readthedocs.yml  README.md  environment.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: 1-bug_report.md
.github/workflows/: build-documentation.yml  pre-commit-ci.yml  publish-to-pypi.yml  smoke-test.yml  testing-and-coverage.yml
docs/: conf.py  index.rst
example/: .gitattributes  desy3.yaml
example/350139/: zone135_mod.astro.json
src/ngmix4piff/: __init__.py  ngmix_utils.py  piff_interface.py
tests/ngmix4piff/: test_example_module.py  test_packaging.py
